<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_github_user"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_github_user"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="collapseActionView"
        />
</menu>